--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,9 @@ a.active,a:hover{
     .checkbtn{
         display: block;
     }
+    .dropbtn{
+      display: none;
+    }
     ul {
         position: fixed;
         width: 100%;
@@ -101,6 +104,13 @@ a.active,a:hover{
         background: none;
         color: #0082e6;
     }
+
+    .sticker-content{
+      display:flex;
+      flex-direction: column;
+    }
+
+
     #check:checked ~ ul {
         left : 0;
         background-size: cover;
@@ -108,7 +118,57 @@ a.active,a:hover{
     }
 }
 
-/*-------*/
+@media screen and (min-width: 858px){
+  .dropbtn {
+    /* background-color: #4CAF50; */
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+    width: 80%;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    top: 20px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    line-height: 20px;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    border-radius: 3px;
+    left: -50px;
+  }
+  .dropdown:hover .dropbtn {
+    background-color: #1b9bff;
+  }
+  .sticker-content{
+   font-size: 12px;
+  }
+
+}
 
 .container {
     display: flex;
@@ -160,179 +220,6 @@ a.active,a:hover{
   .boxbtn:hover{
     background-color: red;
   }
-
-  /* footer*/
-
-  /* .footer-dark {
-    padding:50px 0;
-    color:#f0f9ff;
-    background-color:#282d32;
-    font-family: 'Poppins';
-    margin-top: 3%;
-  }
-  
-  .footer-dark h3 {
-    margin-top:0;
-    margin-bottom:12px;
-    font-weight:bold;
-    font-size:16px;
-  }
-  
-  .footer-dark ul {
-    padding:0;
-    list-style:none;
-    line-height:1.6;
-    font-size:14px;
-    margin-bottom:0;
-  }
-  
-  .footer-dark ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.6;
-  }
-  
-  .footer-dark ul a:hover {
-    opacity:0.8;
-  }
-  
-  @media (max-width:767px) {
-    .footer-dark .item:not(.social) {
-      text-align:center;
-      padding-bottom:20px;
-    }
-  }
-  
-  .footer-dark .item.text {
-    margin-bottom:36px;
-  }
-  
-  @media (max-width:767px) {
-    .footer-dark .item.text {
-      margin-bottom:0;
-    }
-  }
-  
-  .footer-dark .item.text p {
-    opacity:0.6;
-    text-align: center;
-  }
-  
-  .footer-dark .item.social {
-    text-align:center;
-  }
-  
-  @media (max-width:991px) {
-    .footer-dark .item.social {
-      text-align:center;
-      margin-top:20px;
-    }
-  }
-  
-  .footer-dark .item.social > a {
-    font-size:20px;
-    width:36px;
-    height:36px;
-    line-height:36px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
-    margin:0 8px;
-    color:#fff;
-    opacity:0.75;
-  }
-  
-  
-  .footer-dark .item.social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer-dark .copyright {
-    text-align:center;
-    padding-top:24px;
-    opacity:0.3;
-    font-size:13px;
-    margin-bottom:0;
-  } */
-
-  /* new/*
-
-  /* .fcontainer { 
-    margin-top: 3%;
-    color:#f0f9ff;
-    background-color:#282d32;
-    font-family: 'Poppins';
-    margin-top: 3%;
-  }
-  .fcontainer .item {
-    position: relative;
-    width: 350px;
-    padding: 40px;
-    border-radius: 4px;
-    margin: 20px;
-    box-sizing: border-box;
-    overflow: hidden;
-    text-align: center;
-  }
-
-  .row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3%;
-  }
-
-  @media (max-width:991px) {
-    .footer-dark .item.social {
-      text-align:center;
-      margin-top:20px;
-    }
-  }
-
-  @media (max-width:767px) {
-    .footer-dark .item.text {
-      margin-bottom:0;
-    }
-  }
-
-  @media (max-width:767px) {
-    .footer-dark .item:not(.social) {
-      text-align:center;
-      padding-bottom:20px;
-    }
-}
-    .footer-dark .copyright {
-        text-align:center;
-        padding-top:24px;
-        opacity:0.3;
-        font-size:13px;
-        margin-bottom:0;
-      } 
-
-      .social > a {
-        font-size:20px;
-        width:36px;
-        height:36px;
-        line-height:36px;
-        display:inline-block;
-        text-align:center;
-        border-radius:50%;
-        box-shadow:0 0 0 1px rgba(255,255,255,0.4);
-        margin:0 8px;
-        color:#fff;
-        opacity:0.75;
-      }
-
-      .social {
-        text-align:center;
-        padding-top:24px;
-        opacity:0.3;
-        font-size:13px;
-        margin-bottom:0;
-      } */
-
 
 .fcontainer{
 	max-width: 1170px;
