--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ nav ul{
 
 nav ul li{
      display: inline-block;
-     line-height: 80px;
      margin: 0 5px;  
 }
 
@@ -121,11 +120,11 @@ a.active{
 @media screen and (min-width: 858px){
   .dropbtn {
     color: white;
-    /* padding: 10px; */
+    padding: 10px;
     border: none;
     cursor: pointer;
     border-radius: 3px;
-    /* width: 80%; */
+    width: 80%;
   }
   
   .dropdown {
@@ -437,6 +436,7 @@ ul{
   text-align: center;
   font-size: 35px;
   line-height: 80px;
-  padding: 0 100px;
+  /* padding: 0 100px; */
+  
   font-weight: bold;
 }
