--- a/css/style.css
+++ b/css/style.css
@@ -440,3 +440,25 @@ ul{
   
   font-weight: bold;
 }
+
+.gamecontainerbox{
+  
+
+}
+ .gamebox {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+  width: 70em;
+  padding: 4em;
+  background: #fff;
+  box-shadow: 0 5px 15px rgba(0,0,0,.1);
+  border-radius: 4px;
+  margin: 20px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.gamebox .gamecontent{
+flex: 1;
+}
