--- a/css/profile.css
+++ b/css/profile.css
@@ -26,7 +26,7 @@
       display: inline-block;
       flex-direction:row ;
       padding: 10px 20px;
-      background: #000;
+      background: #4C4CFF;
       border-radius: 4px;
       text-decoration: none;
       color: #fff;
@@ -35,7 +35,7 @@
   }
 
   .boxbtnn:hover{
-    background-color: red;
+    background-color: #4C4CFF;
   }
 
   /* .fcontainer{
